feat: improve agent tool provider with abort mechanism and rate limiting